Don't use deprecated newInstance method.
Change-Id: Ic7868c9f1637b7a290b5d51a280b3c94aca79133
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>